src/objects/SmsLog__c.object
<CustomObject>
    <fields>
        <fullName>FromNumber__c</fullName>
        <label>From Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToNumber__c</fullName>
        <label>To Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SMS Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>SMS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>